syntax = "proto3";

package infinimesh.shadow;

import "google/protobuf/struct.proto";

option go_package = "shadowpb";

message GetReportedRequest {
  string device_id = 1;
}

message GetReportedResponse{
  google.protobuf.Value state = 1;
}

service Shadow {
  rpc GetReported(GetReportedRequest) returns (GetReportedResponse);
}
